@@ -4,4 +4,5 @@ while the song is playing -- the output will have clicks. Simply
 restart playing in order to fix this, or add Geometer when the song is
 not playing.
 
-
+'span' was suggested by Bram of Smartelectronix.
+'friends' was suggested by Jason Reed, sort of.
